Regression(266594@main) Crash under NetworkSession::unregisterNetworkDataTask() https://bugs.webkit.org/show_bug.cgi?id=259910 <rdar://113530127>

Reviewed by J Pascoe.

NetworkDataTask::m_session is a WeakPtr and may thus be null by the time the
NetworkDataTask runs. Null check it before calling `unregisterNetworkDataTask()`
on it.

* Source/WebKit/NetworkProcess/NetworkDataTask.cpp:
(WebKit::NetworkDataTask::~NetworkDataTask):

Canonical link: https://commits.webkit.org/266690@main